# ProgObjet

./: CMakeLists.txt  Equation.cpp  Equation.h  IMesh.cpp  IMesh.h  Main.cpp  Problem.cpp  Problem.h  README.md  Test.cpp  Timer.cpp  Variable.cpp  Variable.h  script.sh
TD2/: CMakeLists.txt  Equation.cpp  Equation.h  IMesh.cpp  IMesh.h  Main.cpp  Problem.cpp  Problem.h  Test.cpp  Timer.h  Variable.cpp  Variable.h
TD2/Resultats/: plot-resultat.gp
